# gedidb

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .zenodo.json  AUTHORS.rst  CITATION  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  README.md  README.rst  config.yml  conftest.py  constants.py  meta.yml  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  new-feature.yml  post-install.yml
.github/workflows/: ci-additional.yaml  ci.yaml  generate-paper-pdf.yaml  generate-paper-pdf.yml.yaml  pylint.yaml  pypi-release.yaml  upstream-dev-ci.yaml
GEDItools/: __init__.py
GEDItools/database/: db.py  db_builder.py  db_schema.py
GEDItools/downloader/: cmr_query.py  data_downloader.py
GEDItools/processor/: granule_parser.py
GEDItools/processor/beam/: beam.py  l1b_beam.py  l2a_beam.py  l2b_beam.py  l4a_beam.py  l4c_beam.py
GEDItools/processor/granule/: granule.py  l1b_granule.py  l2a_granule.py  l2b_granule.py  l4a_granule.py  l4c_granule.py
GEDItools/utils/: constants.py
ci/: build_gedidb_testsuite_image.sh
ci/context/: gedidb_ci.docker
ci/requirements/: doc.yml  environment.yml
config_files/: bucket-policy.json  column_to_field.yml  database_params.yml  database_scheme.yaml  database_scheme.yml  database_structure.yml  db_scheme.sql  earth_data_credentials.yml  field_mapping.yml  gedi_layers_config.yaml  quality_filters.yml  test.yml
doc/: conf.py  example.nc  external-examples-gallery.txt  gallery.yml  index.html  index.rst  notebooks-examples-gallery.txt  videos-gallery.txt  whats-new.rst
doc/_build/doctrees/: README.doctree  contributing.doctree  howdoi.doctree  index.doctree  tutorials-and-videos.doctree  whats-new.doctree
doc/_build/html/: .buildinfo  README.html  _rediraffe_redirected.json  contributing.html  faq.html  genindex.html  howdoi.html  index.html  installing.html  objects.inv  (+8 more)
doc/auto_examples/: authentification.py  authentification.rst  data_processor.ipynb  data_processor.py  data_processor.rst  data_provider.codeobj.json  data_provider.ipynb  data_provider.py  data_provider.rst  get_variable_list.py  index.rst  regional_tileDBdatabase.ipynb  regional_tileDBdatabase.py  regional_tileDBdatabase.rst
doc/database/: index.rst  quick-overview.rst
doc/dev/: index.rst
doc/gallery/: data_provider.py  regional_tileDBdatabase.py
doc/getting-started-guide/: index.rst  installing.rst
doc/user/: api.rst  basics.authenticate.rst  basics.database.rst  basics.processor.rst  basics.provider.rst  basics.rst  basics.setup.rst  basics.terminology.rst  basics.tuning-config.rst  contributing.rst  database.connect.rst  database.external.rst  database.rst  database.scheme.rst  database.setup.rst  faq.rst  fundamentals.authenticate.rst  fundamentals.filters.rst  fundamentals.processor.rst  fundamentals.provider.rst  fundamentals.setup.rst  index.rst  installing.rst  quick-overview.rst  terminology.rst  tiledb_database.rst  tuning-config.rst  tutorials.rst  why-gedidb.rst
docs/: Makefile  conf.py  howdoi.rst  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
examples/: authentification.ipynb  data_processor.ipynb
gedidb/: __init__.py  _version.py  version.py
gedidb/beam/: Beam.py  __init__.py  l2a_beam.py  l2b_beam.py  l4a_beam.py  l4c_beam.py
gedidb/core/: __init__.py  gedidatabase.py  gedigranule.py  gedimetadata.py  gediprocessor.py  gediprovider.py
gedidb/database/: db.py  db_builder.py  db_query.py  db_schema.py
gedidb/downloader/: __init__.py  authentication.py  cmr_query.py  data_downloader.py
gedidb/granule/: Granule.py  __init__.py  granule_name.py  granule_parser.py  l2a_granule.py  l2b_granule.py  l4a_granule.py  l4c_granule.py
gedidb/metadata/: metadata_operations.py
gedidb/processor/: granule_parser.py
gedidb/providers/: __init__.py  db_provider.py  db_query.py  gedi_provider.py  tiledb_provider.py
gedidb/tests/: sample_join.py  sample_read.py  test_auth.py  test_cmr_data_downloader.py  test_columns.py  test_data_config_yml.py  test_data_downloader.py  test_gedi_granule.py  test_gedi_granules.py  test_gedi_processor.py  test_geospatial_tools.py  test_granule_name.py  test_h5_file_downloader.py  test_local_tiledb.py  test_nasa_cmr_api.py  test_print_version.py  test_provider.py  test_results.py  test_show_versions.py  test_spatial_consolidation_planner.py  test_tiledb_provider.py  test_vertical_profiler.py  test_write_db.py
gedidb/utils/: benchmark_s3_tiledb.py  constants.py  filters.py  gedi_metadata.py  geo_processing.py  geospatial_tools.py  print_versions.py  profiles.py  progress_ledger.py  spark_session.py  tiledb_consolidation.py
geditoolbox/: __init__.py
geditoolbox/database/: db.py  db_builder.py
geditoolbox/db/: column_to_field.py  db.py
geditoolbox/downloader/: cmr_query.py  data_downloader.py
geditoolbox/granule_data/: granule_parser.py
geditoolbox/granule_downloader/: cmr_query.py  data_downloader.py
geditoolbox/pipeline/: data_setup.py
geditoolbox/processor/: granule_parser.py
geditoolbox/spark/: spark_session.py
granule_data/: granule.py  granule_parser.py  l1b.py  l2a.py  l2b.py  l3.py  l4a.py
granule_data/beam/: beam.py  l1b_beam.py  l2a_beam.py  l2b_beam.py  l3_beam.py  l4a_beam.py  l4c_beam.py
granule_data/granule/: granule.py  l1b_granule.py  l2a_granule.py  l2b_granule.py  l3_granule.py  l4a_granule.py  l4c_granule.py
granule_downloader/: cmr_query.py  data_downloader.py  data_handler.py
paper/: README.md  paper.md  refs.bib
pipeline/: data_setup.py  granule_data.csv
scripts/: EarthData_authentification.py  annotate_files_licence.sh  check_tileDB_metadata.py  cmr_query.py  create_database.py  create_fragment_domain.py  data_retriever.py  database_query.py  extract_metadata.py  test_consolidation_plan.py  test_patch_generation.py  test_processor.py  test_provider.py  test_spatially_structured_tileDB.py  test_tileDB.py
spark/: spark_session.py
test_data/geojson/: test.geojson
(+79 files in other folders)
