[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm>=8"
]

[project]
name = "gedidb"
dynamic = ["version"]
description = "A toolbox to download, process, store and visualise Global Ecosystem Dynamics Investigation (GEDI) L2A-B and L4A-C data"
readme = "README.md"
authors = [
    { name = "Simon Besnard", email = "simon.besnard@gfz.de" },
    { name = "Felix Dombrowski", email = "felix.dombrowski@uni-potsdam.de" },
    { name = "Amelia Holcomb", email = "amelia.holcomb@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["geospatial", "GEDI", "database"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
requires-python = ">=3.10"

dependencies = [
    "dask>=2025.9.1",
    "distributed>=2025.9.1",
    "geopandas>=1.1.1",
    "h5py>=3.14.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "scipy>=1.16.2",
    "tiledb>=0.34.2",
    "xarray>=2025.9.0"
]

[project.urls]
homepage = "https://github.com/simonbesnard1/gedidb"
documentation = "https://gedidb.readthedocs.io/en/latest/"
source = "https://github.com/simonbesnard1/gedidb"
tracker = "https://github.com/simonbesnard1/gedidb/issues"

[project.optional-dependencies]
# Performance / acceleration
accel = [
    "bottleneck>=1.3",
    "numbagg>=0.8",
    "flox>=0.8",
    "opt_einsum>=3.3",
    "numba>=0.58",
    "cython>=3.0"
]

# IO and cloud access
io = [
    "boto3>=1.28",
    "s3fs>=2023.6",
    "fsspec>=2023.6",
    "zarr>=2.16",
    "netCDF4>=1.6",
    "h5netcdf>=1.2",
    "cftime>=1.6",
    "pooch>=1.7",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "pydap; python_version < '3.10'"
]

# Visualization
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "cartopy>=0.22",
    "nc-time-axis>=1.4",
    "plotly>=5.17",
    "holoviews>=1.17"
]

# Logging / debugging
debug = [
    "rich>=13.7",
    "loguru>=0.7"
]

# Full stack (cannot reference other extras in TOML; list them explicitly)
full = [
    # accel
    "bottleneck>=1.3",
    "numbagg>=0.8",
    "flox>=0.8",
    "opt_einsum>=3.3",
    "numba>=0.58",
    "cython>=3.0",
    # io
    "boto3>=1.28",
    "s3fs>=2023.6",
    "fsspec>=2023.6",
    "zarr>=2.16",
    "netCDF4>=1.6",
    "h5netcdf>=1.2",
    "cftime>=1.6",
    "pooch>=1.7",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "pydap; python_version < '3.10'",
    # viz
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "cartopy>=0.22",
    "nc-time-axis>=1.4",
    "plotly>=5.17",
    "holoviews>=1.17",
    # debug
    "rich>=13.7",
    "loguru>=0.7"
]

# Dev tools only; install as: python -m pip install -e ".[dev,full]"
# (Removed invalid 'gedidb[complete]' self-reference)
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-env>=1.0",
    "pytest-xdist>=3.3",
    "pytest-timeout>=2.2",
    "hypothesis>=6.88",
    "pre-commit>=3.5",
    "ruff>=0.3",
    "mypy>=1.7",
    "black>=24.3",
    "isort>=5.12"
]

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-self", "redundant-expr"]
exclude = ['build']
files = "gedidb"
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
extend-exclude = ["doc", "_typed_ops.pyi"]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["gedidb/tests*", "gedidb/tests/*", "gedidb/tests/**/*", "scripts*"]

[tool.setuptools_scm]
fallback_version = "9999"

